[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310', "py311"]
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
    | \.tox
  )/
)
'''

[tool.isort]
line_length = 88
profile = "black"

[tool.poetry]
name = "redhat-qe-cloud-tools"
version = "1.0.10"
description = "Python utilities to manage cloud services, such as AWS."
authors = ["Meni Yakove", "Ruth Netser"]
readme = "README.md"
repository = "https://github.com/RedHatQE/cloud-tools"
packages = [{include = "clouds"}]
license = "Apache-2.0"
homepage = "https://github.com/RedHatQE/cloud-tools"
documentation = "https://github.com/RedHatQE/cloud-tools/blob/main/README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#TODO: keywords ?

[tool.poetry.dependencies]
# Ipython requires Python >=3.9
python = "^3.9"
boto3 = "^1.28.1"
colorlog = "^6.7.0"
openshift-python-utilities = "^4.14.2"
python-simple-logger = "^1.0.5"
click = "^8.1.4"
configparser = "^6.0.0"

[tool.poetry.urls]
Download = "https://pypi.org/project/redhat-qe-cloud-tools/"
"Bug Tracker" = "https://github.com/RedHatQE/cloud-tools/issues"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.13"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning.substitution]
files = ["VERSION"]

[tool.poetry-dynamic-versioning]
enable = true
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
